--- a/web/src/styles/variable.css
+++ b/web/src/styles/variable.css
@@ -16,11 +16,17 @@
   --color-black5: rgba(0, 0, 0, 0.3);
   --color-black6: rgba(76, 76, 76, 0.8);
   --color-black7: rgba(76, 76, 76, 0.9);
+  --color-black8: #a7a7a7;
+  --color-black9: rgba(90, 90, 90, 0.8);
+  --color-black10: rgba(0, 0, 0, 0.4);
+  --color-black11: rgba(76, 76, 76, 0.5);
+  --color-black12: #908e8e;
 
   --color-blue1: #00a6ff;
   --color-blue2: rgba(0, 166, 255, 0.7);
   --color-blue3: rgba(0, 166, 255, 0.5);
   --color-blue4: rgba(0, 166, 255, 0.9);
+  --color-blue5: #42a5f5;
 
   --color-green1: rgba(46, 206, 35, 0.9);
   --color-green2: rgba(46, 206, 35, 0.7);
@@ -46,6 +52,7 @@
   --sortfolderdialog-container-index: 5;
   --sortfolderdialog-form-item-main-path-select-index: 6;
   --sortfolderdialog-btn-loading-index: 2;
+  --picfolderdialog-block-index: 2;
   --errordialog-container-index: 95;
   --message-container-index: 99;
   /* 通用变量 */
