--- a/web/src/styles/layout/controler.scss
+++ b/web/src/styles/layout/controler.scss
@@ -61,6 +61,31 @@
         width: 32px;
         height: 32px;
         position: relative;
+        cursor: pointer;
+        transform: scale(1);
+        transition: all 0.2s ease;
+        &.disabled {
+          transform: scale(1) !important;
+          .controler-header-item-bg {
+            background-color: transparent !important;
+          }
+          cursor: not-allowed;
+          * {
+            cursor: not-allowed !important;
+          }
+          .controler-header-item-icon {
+            opacity: 0.4;
+          }
+        }
+        &:hover {
+          .controler-header-item-bg {
+            opacity: 1;
+            transform: scale(1);
+          }
+        }
+        &:active {
+          transform: scale(0.9);
+        }
         .controler-header-item-bg {
           width: 100%;
           height: 100%;
@@ -69,11 +94,8 @@
           opacity: 0;
           transform: scale(0);
           transition: all 0.2s ease;
-        }
-        &:hover {
-          .controler-header-item-bg {
-            opacity: 1;
-            transform: scale(1);
+          &.delete {
+            background-color: var(--color-red3);
           }
         }
         .controler-header-item-icon {
@@ -84,6 +106,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          transition: all 0.2s ease;
         }
       }
     }
