完成顶部信息模块

--- a/web/src/styles/variable.css
+++ b/web/src/styles/variable.css
@@ -55,6 +55,7 @@
   --sortfolderdialog-btn-loading-index: 2;
   --picfolderdialog-block-index: 2;
   --mainfolderdialog-form-item-folder-index: 2;
+  --conflictdialog-container-index: 7;
   --errordialog-container-index: 95;
   --message-container-index: 99;
   /* 通用变量 */
