--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -54,6 +54,18 @@ body {
 // 禁止变更文本域尺寸
 textarea {
   resize: none;
+  caret-color: var(--color-blue1);
+  line-height: 20px;
+  text-decoration: none; /* 去除下划线 */
+  &::selection {
+    background-color: var(--color-blue2);
+  }
+  &::placeholder {
+    transition: opacity 0.3s ease;
+    opacity: 1;
+    user-select: none;
+    color: var(--color-white7);
+  }
 }
 
 // 禁止选中
@@ -66,6 +78,10 @@ p {
 // 防止拼写检查
 input {
   text-decoration: none; /* 去除下划线 */
+  caret-color: var(--color-blue1);
+  &::selection {
+    background-color: var(--color-blue2);
+  }
 }
 
 // 日期选择器
