--- a/web/src/styles/variable.css
+++ b/web/src/styles/variable.css
@@ -22,6 +22,7 @@
   --color-black10: rgba(0, 0, 0, 0.4);
   --color-black11: rgba(76, 76, 76, 0.5);
   --color-black12: #908e8e;
+  --color-black13: #3c3c3c;
 
   --color-blue1: #00a6ff;
   --color-blue2: rgba(0, 166, 255, 0.7);
