完成删除图片模块

--- a/web/src/styles/dialog/deletedialog.scss
+++ b/web/src/styles/dialog/deletedialog.scss
@@ -52,6 +52,8 @@
         .deletedialog-form-item-label {
           color: var(--color-white2);
           margin-bottom: 4px;
+          word-break: break-all;
+          text-align: justify;
         }
         .deletedialog-form-item-tip {
           margin-top: 12px;
