--- a/web/src/styles/layout/controler.scss
+++ b/web/src/styles/layout/controler.scss
@@ -391,6 +391,19 @@
             border-radius: 4px;
             background-color: var(--color-red3);
             transition: transform 0.2s ease, background-color 0.3s ease;
+            position: relative;
+            .controler-btn-icon-loading {
+              position: absolute;
+              left: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%) scale(0.7);
+              z-index: 2;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              opacity: 0;
+              transition: all 0.2s ease;
+            }
             &:hover {
               background-color: var(--color-red2);
               .controler-btn-icon {
@@ -402,6 +415,35 @@
               transform: scale(0.85);
               .controler-btn-icon {
                 transform: scale(1);
+              }
+            }
+            &.disabled {
+              background-color: var(--color-red3) !important;
+              opacity: 0.7;
+              transform: scale(1) !important;
+              cursor: not-allowed !important;
+              * {
+                cursor: not-allowed !important;
+              }
+              .controler-btn-icon {
+                transform: scale(1) !important;
+              }
+            }
+            &.loading {
+              background-color: var(--color-red3) !important;
+              opacity: 0.7;
+              transform: scale(1) !important;
+              cursor: wait !important;
+              * {
+                cursor: wait !important;
+              }
+              .controler-btn-icon {
+                transform: scale(0.7) !important;
+                opacity: 0;
+              }
+              .controler-btn-icon-loading {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 1;
               }
             }
           }
