--- a/web/src/styles/dialog/picfolderdialog.scss
+++ b/web/src/styles/dialog/picfolderdialog.scss
@@ -7,15 +7,23 @@
   z-index: var(--sortfolderdialog-container-index);
   background-color: var(--color-black5);
   visibility: hidden;
-  * {
-    visibility: hidden !important;
-  }
   opacity: 0;
   transition: all 0.3s ease;
   &.show {
     visibility: visible;
-    * {
-      visibility: visible !important;
+    .picfolderdialog-config-item-right {
+      &.show {
+        visibility: visible !important;
+        opacity: 1 !important;
+        transform: translateX(0) !important;
+      }
+    }
+    .picfolderdialog-form-item-select {
+      &.show {
+        top: 244px !important;
+        visibility: visible !important;
+        opacity: 1 !important;
+      }
     }
     opacity: 1;
     .picfolderdialog-main {
@@ -114,11 +122,6 @@
             opacity: 0;
             transform: translateX(-8px);
             transition: all 0.3s ease;
-            &.show {
-              visibility: visible;
-              opacity: 1;
-              transform: translateX(0);
-            }
             .picfolderdialog-config-item-unit {
               color: var(--color-white2);
               text-decoration: underline;
@@ -294,11 +297,6 @@
       transition: all 0.3s ease;
       visibility: hidden;
       opacity: 0;
-      &.show {
-        top: 244px;
-        visibility: visible;
-        opacity: 1;
-      }
       .picfolderdialog-form-item-select-item {
         width: 100%;
         height: 28px;
