--- a/web/src/styles/dialog/sortfolderdialog.scss
+++ b/web/src/styles/dialog/sortfolderdialog.scss
@@ -7,15 +7,16 @@
   z-index: var(--sortfolderdialog-container-index);
   background-color: var(--color-black5);
   visibility: hidden;
-  * {
-    visibility: hidden !important;
-  }
   opacity: 0;
   transition: all 0.3s ease;
   &.show {
     visibility: visible;
-    * {
-      visibility: visible !important;
+    .sortfolderdialog-form-item-select {
+      &.show {
+        top: 240px !important;
+        visibility: visible !important;
+        opacity: 1 !important;
+      }
     }
     opacity: 1;
     .sortfolderdialog-main {
@@ -168,11 +169,6 @@
       transition: all 0.3s ease;
       visibility: hidden;
       opacity: 0;
-      &.show {
-        top: 240px;
-        visibility: visible;
-        opacity: 1;
-      }
       .sortfolderdialog-form-item-select-item {
         width: 100%;
         height: 28px;
