--- a/web/src/styles/components/message.scss
+++ b/web/src/styles/components/message.scss
@@ -11,6 +11,7 @@
   box-shadow: 0 0 4px 2px rgba($color: #000000, $alpha: 0.2);
   max-width: 25%;
   text-align: justify;
+  word-break: break-all;
   opacity: 0;
   transition: top 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
   visibility: hidden;
