--- a/web/src/styles/variable.css
+++ b/web/src/styles/variable.css
@@ -54,6 +54,7 @@
   --controler-sort-item-index: 2;
   --controler-sort-item-top-left-icon-selected-index: 2;
   --controler-sort-item-top-left-icon-select-index: 3;
+  --controler-sort-item-setting-index: 4;
   --viewer-controler-unfold-container-index: 10;
   --sortfolderdialog-container-index: 5;
   --sortfolderdialog-form-item-main-path-select-index: 6;
