--- a/web/src/styles/viewer/horizontalviewer.scss
+++ b/web/src/styles/viewer/horizontalviewer.scss
@@ -1,7 +1,83 @@
 .horizontalviewer-container {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  position: relative;
+  .horizontalviewer-main-container {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+  }
+  .horizontalviewer-preview-container {
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+    width: 36px;
+    border-radius: 0 4px 4px 0;
+    transition: width 0.5s ease, opacity 0.3s ease;
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
+    &.show {
+      width: 100%;
+      opacity: 1 !important;
+      .horizontalviewer-preview-fold-main {
+        left: 0 !important;
+      }
+    }
+    z-index: 6;
+    height: 72px;
+    background-color: var(--color-black1);
+    padding: 6px 0;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+    .horizontalviewer-preview-main {
+      height: 100%;
+      width: calc(100% - 44px);
+      overflow-x: scroll;
+      display: inline-block;
+      margin-left: 8px;
+      .horizontalviewer-preview-item-container {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        // min-width: 1400px;
+        width: max-content;
+      }
+    }
+    .horizontalviewer-preview-fold-container {
+      height: 100%;
+      width: 36px;
+      display: inline-block;
+      background-color: var(--color-black1);
+      overflow: hidden;
+      cursor: pointer;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 2;
+      .horizontalviewer-preview-fold-main {
+        display: flex;
+        align-items: center;
+        width: 72px;
+        min-width: 72px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: -36px;
+        transition: left 0.5s ease;
+        .horizontalviewer-preview-fold {
+          height: 100%;
+          width: 36px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
+  }
   .horizontalviewer-main {
     width: 100%;
     display: flex;
