--- a/web/src/styles/layout/header.scss
+++ b/web/src/styles/layout/header.scss
@@ -36,6 +36,7 @@
       .header-info-item {
         margin-right: 20px;
         max-width: 240px;
+        user-select: none;
         &.withicon {
           margin-right: 8px;
         }
@@ -43,6 +44,13 @@
           display: flex;
           align-items: center;
           justify-content: center;
+        }
+        &.clickable {
+          cursor: pointer;
+          transition: color 0.2s ease;
+          &:hover {
+            color: var(--color-blue5);
+          }
         }
       }
     }
