--- a/web/src/styles/dialog/settingdialog.scss
+++ b/web/src/styles/dialog/settingdialog.scss
@@ -258,6 +258,13 @@
               &.qrcode {
                 width: max-content;
                 padding: 12px;
+                transition: all 0.3s ease;
+                opacity: 0;
+                transform: translateY(-8px);
+                &.show {
+                  opacity: 1;
+                  transform: translateY(0);
+                }
               }
               .btn {
                 color: var(--color-black8);
