--- a/web/src/styles/dialog/settingdialog.scss
+++ b/web/src/styles/dialog/settingdialog.scss
@@ -96,6 +96,19 @@
               .settingdialog-setting-item-path {
                 color: var(--color-white6);
                 max-width: 85%;
+                width: max-content;
+                position: relative;
+                cursor: pointer;
+                &::after {
+                  content: "";
+                  position: absolute;
+                  bottom: 1px; /* 位置 */
+                  left: 0;
+                  right: 0;
+                  height: 1.5px; /* 下划线粗细 */
+                  background-color: var(--color-white6); /* 下划线颜色 */
+                  pointer-events: none;
+                }
               }
               .settingdialog-setting-item-tip {
                 margin-top: 8px;
@@ -136,6 +149,37 @@
                 }
                 &:active {
                   background-color: var(--color-blue3);
+                }
+                &.loading {
+                  background-color: var(--color-blue3) !important;
+                  cursor: wait;
+                  .settingdialog-setting-apply-btn-text {
+                    opacity: 0;
+                    transform: scale(0.5);
+                  }
+                  .settingdialog-setting-apply-btn-loading {
+                    opacity: 1;
+                    transform: translate(-50%, -50%) scale(1);
+                  }
+                }
+                .settingdialog-setting-apply-btn-text {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  transform: scale(1);
+                  transition: all 0.3s ease;
+                }
+                .settingdialog-setting-apply-btn-loading {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  position: absolute;
+                  left: 50%;
+                  top: 50%;
+                  transform: translate(-50%, -50%) scale(0.5);
+                  z-index: var(--sortfolderdialog-btn-loading-index);
+                  opacity: 0;
+                  transition: all 0.3s ease;
                 }
               }
             }
