--- a/web/src/styles/dialog/settingdialog.scss
+++ b/web/src/styles/dialog/settingdialog.scss
@@ -93,6 +93,99 @@
                 color: var(--color-white2);
                 margin-bottom: 4px;
               }
+              .settingdialog-setting-item-shortcut {
+                display: flex;
+                align-items: center;
+                .settingdialog-setting-item-shortcut-key {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  height: 24px;
+                  width: 120px;
+                  background-color: var(--color-black1);
+                  border-radius: 4px;
+                  margin-right: 12px;
+                  color: var(--color-white2);
+                  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                  user-select: none;
+                  font-weight: 600;
+                }
+              }
+              .settingdialog-setting-item-shortcut-sort-title {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                border-top: 1px solid var(--color-white7);
+                border-bottom: 1px solid var(--color-white7);
+                color: var(--color-white7);
+                margin-top: 8px;
+                .settingdialog-setting-item-shortcut-sort-item {
+                  display: flex;
+                  align-items: center;
+                  font-size: 14px;
+                  .settingdialog-setting-item-shortcut-sort-item-index {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 48px;
+                    height: 24px;
+                    margin-right: 12px;
+                    user-select: none;
+                    font-weight: 600;
+                  }
+                  .settingdialog-setting-item-shortcut-sort-item-key {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 24px;
+                    width: 120px;
+                    user-select: none;
+                    font-weight: 600;
+                  }
+                }
+              }
+              .settingdialog-setting-item-shortcut-sort {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-wrap: wrap;
+                transition: opacity 0.3s ease;
+                &.disabled {
+                  opacity: 0.5;
+                }
+                .settingdialog-setting-item-shortcut-sort-item {
+                  display: flex;
+                  align-items: center;
+                  margin-top: 8px;
+                  font-size: 14px;
+                  & .settingdialog-setting-item-shortcut-sort-item-index {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 48px;
+                    height: 24px;
+                    border-radius: 4px;
+                    margin-right: 12px;
+                    user-select: none;
+                    font-weight: 600;
+                    background-color: var(--color-black1);
+                    color: var(--color-white2);
+                  }
+                  .settingdialog-setting-item-shortcut-sort-item-key {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 24px;
+                    width: 120px;
+                    background-color: var(--color-black1);
+                    border-radius: 4px;
+                    color: var(--color-white2);
+                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                    user-select: none;
+                    font-weight: 600;
+                  }
+                }
+              }
               .settingdialog-setting-item-path {
                 color: var(--color-white6);
                 max-width: 85%;
